[project]
name = "dbt"
version = "0.1.0"
description = ""
authors = [
    {name = "Guilherme", email = "gusantos.ok@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "dbt-databricks (>=1.10.2,<2.0.0)",
    "dbt-core (>=1.9.6,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"

[tool.taskipy.tasks]
pre_doc = "dbt docs generate"
pre_build = "task pre_doc"
clean = "dbt clean && dbt compile"
build = "dbt build"
deps = "dbt deps"
doc = "dbt docs serve --port 8080"
run = "dbt run"
snapshot = "dbt snapshot"
seed = "dbt seed"
test = "dbt test"
